--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "deploy-local": "graph deploy davekaj/uniswap --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "deploy": "graph deploy ianlapham/uniswap-v2-rinkeby --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --debug",
     "deploy-staging": "graph deploy $THE_GRAPH_GITHUB_USER/$THE_GRAPH_SUBGRAPH_NAME /Uniswap --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/",
-    "watch-local": "graph deploy graphprotocol/Uniswap2 --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001"
+    "watch-local": "graph deploy graphprotocol/Uniswap2 --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001",
+    "create-gcp1": "graph create gztest/uniswap-v2 --node http://35.220.234.34:8020",
+    "deploy-gcp1": "graph deploy gztest/uniswap-v2 --debug --ipfs http://35.220.234.34:5001 --node http://35.220.234.34:8020",
+    "remove-gcp1": "graph remove gztest/uniswap-v2 --node http://35.220.234.34:8020"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.16.0",
